# purr

./: pyproject.toml
.purr/: purr.toml
src/: main.py
